# fuck-you

./: Cargo.toml
src/: main.rs
