[package]
name = "fuck-you"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
fake = { version = "2.5.0", features = ["derive", "http"] }
rand = "0.8.5"
rayon = "1.7.0"
reqwest = { version = "0.11.16", features = ["rustls", "socks", "blocking", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
